--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="pic1.jpg" alt="NSR-1"
+    style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
